# logmancer

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: build.yml  desktop-diagnostics-build.yml  release.yml  rust.yml  temporary-desktop-build.yml  test.yml
docs/adr/: 0001-server-file-browser-root-scoped.md  0002-async-position-aware-search-worker.md  0003-core-visual-rules-as-line-style.md
docs/architecture/: containers.md  context.md
docs/feature/: server-file-browser.md  shared-search-engine.md
docs/feature/filter/: plan.md
logmancer-cli/: Cargo.toml
logmancer-cli/src/: main.rs  print_utils.rs
logmancer-core/: Cargo.toml
logmancer-core/src/: file_read_ops.rs  file_write_ops.rs  handler.rs  lib.rs  log_file.rs  log_handler.rs  log_reader.rs  page_result.rs  paged_file_reader.rs  reader.rs  registry.rs  timing.rs  visual_rules.rs  worker.rs
logmancer-core/src/file_ops/: read.rs  write.rs
logmancer-core/src/models/: file_info.rs  log_file.rs  mod.rs  page_result.rs  search.rs  visual_rules.rs
logmancer-core/src/workers/: common.rs  filter.rs  mod.rs  reload.rs  search.rs
logmancer-core/tests/: large_file_responsiveness.rs
logmancer-desktop/: Cargo.toml  tauri.conf.json
logmancer-desktop/capabilities/: default.json
logmancer-desktop/src/: lib.rs  main.rs
logmancer-tui/: Cargo.toml
logmancer-tui/src/: main.rs  print_utils.rs
logmancer-web/: Cargo.toml  build.rs
logmancer-web/src/: app.rs  file_opening.rs  lib.rs  main.rs
logmancer-web/src/api/: app_state.rs  commons.rs  config.rs  file_info.rs  filter.rs  mod.rs  open_files.rs  open_server_file.rs  read_page.rs  search.rs  server_browser.rs  upload_file.rs
logmancer-web/src/components/: app.rs  async_functions.rs  auto_scroll_status.rs  content_lines.rs  content_scroll.rs  context.rs  diagnostics.rs  filter_pane.rs  home.rs  index_progress_bar.rs  layout.rs  line_decorations.rs  lines.rs  log_view.rs  main_pane.rs  mod.rs  pane_index_progress.rs  position_slider.rs  progress_bar.rs  search_panel.rs  search_status.rs  server_file_spotlight.rs
logmancer-web/style/: main.scss
openspec/changes/desktop-native-file-opening/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/desktop-native-file-opening/specs/file-opening-capabilities/: spec.md
packaging/portable/: README.txt
packaging/portable/linux/: run-desktop.sh  run-web.sh
packaging/portable/windows/: run-desktop.cmd  run-web.cmd
skills/rust-quality-gate/: SKILL.md
