[package]
name = "logmancer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
memmap2 = "0.9.5"
regex = "1.11.1"
dashmap = "6.1.0"
uuid = {  version = "1.16.0", features = ['v4'] }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }

[features]
wasm = ["uuid/js"]